[package]
name = "ezinject_webapi"
version = "0.1.0"
authors = ["tuxuser <462620+tuxuser@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
futures = "0.3.15"
libc = "0.2.94"
libloading = "0.7.0"
rweb = "0.12.0"
tokio = "1.6.0"
serde = "1.0.126"
base64 = "0.13.0"